testsuite/tests/module/mod98.stderr

mod98.hs:3:1: error:
    Invalid type signature: M.x :: ...
    Suggested fix:
      A type signature should be of form <variables> :: <type>
